# Wildfire_detection

./: .gitignore  README.md  data.yaml  main.py  pipeline.py  pyproject.toml  requirements.txt  visualize.py
models/: compare.py  evaluate.py  model.py  train.py
prepare_data/: data_cleaner.py  data_explorer.py  data_loader.py  data_preparation.py  split_dataset.py
tests/: test_data_cleaner.py  test_data_explorer.py  test_data_loarder.py
