[project]
name = "wildfire-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "anyio==4.10.0",
    "argcomplete==3.6.2",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.5",
    "boto3==1.40.33",
    "botocore==1.40.33",
    "brotli==1.1.0",
    "cachetools==6.2.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "contourpy==1.3.3",
    "cryptography==46.0.1",
    "cycler==0.12.1",
    "dacite==1.9.2",
    "deprecated==1.2.18",
    "dill==0.4.0",
    "dnspython==2.8.0",
    "fiftyone==1.8.0",
    "fiftyone-brain==0.21.3",
    "fiftyone-db==1.3.0",
    "filelock==3.19.1",
    "fonttools==4.60.0",
    "fsspec==2025.9.0",
    "ftfy==6.3.1",
    "glob2==0.7",
    "graphql-core==3.2.6",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.13.0",
    "hypercorn==0.17.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "imageio==2.37.0",
    "inflate64==1.0.3",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.2",
    "jsonlines==4.0.0",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "lia-web==0.2.3",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "mongoengine==0.29.1",
    "motor==3.6.1",
    "mpmath==1.3.0",
    "multivolumefile==0.2.3",
    "narwhals==2.5.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "packaging==25.0",
    "pandas==2.3.2",
    "paramiko==3.5.1",
    "pillow==11.3.0",
    "plotly==6.3.0",
    "polars==1.33.1",
    "pprintpp==0.4.0",
    "priority==2.0.0",
    "psutil==7.1.0",
    "py7zr==1.0.0",
    "pybcj==1.0.6",
    "pycparser==2.23",
    "pycryptodomex==3.23.0",
    "pydash==8.0.5",
    "pymongo==4.9.2",
    "pynacl==1.6.0",
    "pyparsing==3.2.4",
    "pyppmd==1.2.0",
    "pytest>=8.4.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzstd==0.17.0",
    "rarfile==4.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "retrying==1.4.2",
    "rtree==1.4.1",
    "s3transfer==0.14.0",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "sse-starlette==0.10.3",
    "sseclient-py==1.8.0",
    "starlette==0.48.0",
    "strawberry-graphql==0.282.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tifffile==2025.9.9",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "ultralytics==8.3.201",
    "ultralytics-thop==2.0.17",
    "universal-analytics-python3==1.1.1",
    "urllib3==2.5.0",
    "voxel51-eta==0.15.1",
    "wcwidth==0.2.13",
    "wrapt==1.17.3",
    "wsproto==1.2.0",
    "xmltodict==1.0.2",
]
